# Pixelflow-Labs

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
client/: .gitignore  .yarnrc.yml  package.json
client/src/: App.jsx
client/src/components/layout/: Footer.jsx  Navbar.jsx
client/src/pages/: Dashboard.jsx  Dashboard2.jsx  LandingPage.jsx  TextToVideo.jsx
old/: requirements.txt  trends.py  trends2.py  trends3.py  trends_final.py
scripts/: requirements.txt  trends_final2.py
server/: app.py  db_service.py  requirements.txt  routes.py  video_service.py
trend_job/: ai_analysis.py  api_clients.py  main.py  requirements.txt  sentiment_analysis.py  text_processing.py  trend_analyzer.py
trend_job/collectors/: bluesky_collector.py  reddit_collector.py  youtube_collector.py
